add admin getActiveBookings filters
